<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="monday">Lu</string>
    <string name="tuesday">Lu</string>
    <string name="wednesday">Lu</string>
    <string name="thursday">Lu</string>
    <string name="friday">Lu</string>
    <string name="saturday">Lu</string>
    <string name="sunday">Lu</string>
    <string name="promptAlarm">Tipo de Alarma</string>
    <string name="calendar_event_missing_description">"Pone algo en la descripcion pue!!"</string>
    <string name="calendar_event_undefined_error">"Se produjo un error"</string>
    <string name="calendar_event_missing_sr_chg_number">"Pone algo en el campo!!!"</string>
    <string name="calendar_event_deleted">"Se borro el Evento!!"</string>
    <string name="calendar_event_deleted_error">"Error:"</string>
    <string name="calendar_event_wrong_message">"Fecha Incorrecta!!"</string>
    <string name="calendar_event_added_message">"Evento Agregado!!"</string>
    <string name="specialheader"> &lt;&lt;</string>
    <string name="detailedCalendar">Seleccionar Dia</string>
    <string name="pictureCalendar">ISI-LAR-IEM-IQ</string>
    <string name="pictureCalendarTsp">TSP</string>
    <string name="detailedCalendarTex" type="id">Calendario Detallado por Mes</string>
    <string name="pictureCalendarTex" type="id">Calendario Completo</string>
    <string name="mainScreenLInks" type="id">Links Utiles</string>
    <string name="contacto" type="id">Contacto</string>
    <string name="main_contact" type="id">Justo Vargas</string>
    <string name="main_contact_carlos" type="id">Carlos Perez</string>
    <string name="main_contact_silvana_2" type="id">Sil Trabalon</string>
    <string name="main_contact_unete" type="id">Unete</string>
    <string name="main_contact_unete_details" type="id">Agrupacion de estudiantes de la Facu. Preguntales lo que necesites!!</string>
    <string name="main_contact_details" type="id">Estudiante de ISI. Consejero de Sistemas, fanatico de Independiente y creador de la version de Android de Ingeniero 2.0 y de la idea original</string>
    <string name="main_contact_details_carlos" type="id">Estudiante de ISI. Responsable de la version de Windows Mobile de Ingeniero 2.0</string>
    <string name="main_contact_details_sil_extended" type="id">Estudiante de ISI. Responsable de los contenidos de Ingeniero 2.0</string>
    <string name="main_contact_to_carlos" type="id">Contactalo a Carlos!</string>
    <string name="contact_details_purpose" type="id">Tenes alguna duda sobre la app? sobre la facu? sobre lo que sea del mundo academico? contactanos!!</string>
    <string name="contact_details_purpose_notification" type="id">El profesor no vino? La facultad cerro? sabes algo que los demas necesitan de saber hacelo por este medio!! Elegi la lista y avisales!!</string>
    <string name="main_contact_to_justo" type="id">Mandar un e-mail</string>
    <string name="main_contact_to_notification" type="id">Enviar la notificacion</string>
    <string name="main_contact_to_unete" type="id">Contactalos a los chicos de Unete!</string>
    <string name="app_name">Ingeniero 2.0</string>
    <string name="login_main_label">Ingresar a Ingeniero 2.0</string>
    <string name="mainteance_mode_on">Sysacad No Anda!</string>
    <string name="no_internet">Tu Internet No Anda!</string>
    <string name="login_usr_label">Legajo:</string>
    <string name="no_inetrnet_label">Sepa disculpar los incovenientes, pero esto no funciona sin internet </string>
    <string name="maintenance_mode">Sepa disculpar los incovenientes, pero esto no funciona sin el sysacad </string>
    <string name="login_password_label">Password (Sysacad):</string>
    <string name="main_menu_change">Cambiar Usuario</string>
    <string name="main_menu_sysacad">Sysacad Mobile</string>
    <string name="main_menu_contacto">Consultas</string>
    <string name="main_menu_utn">Pagina Campus UTN FRRe</string>
    <string name="main_menu_calendario">Calendario Academico</string>
    <string name="main_menu_horarios">Horarios Cursado</string>
    <string name="main_menu_add_calendario">Agregar Evento</string>
    <string name="nombre">Nombre:</string>
    <string name="legajo">Legajo:</string>
    <string name="pass">Password:</string>
    <string name="carrera">Carrera:</string>
    <string name="sysacad_menu_exams">Ver Estado Academico</string>
    <string name="sysacad_menu_ins">Gestionar Finales</string>
    <string name="sysacad_menu_ins_cursado">Inscripcion Cursado</string>
    <string name="sysacad_mobile_status_separator"> - </string>
    <string name="sysacad_mobile_status_ready">Usuario Actual:</string>
    <string name="calendar_activity_title">Calendario Academico 2014</string>
    <string name="calendar_activity_details_title">Fecha Seleccionada:</string>
    <string name="calendar_activity_details_title_content">--/--/--</string>
    <string name="calendar_activity_details_content">Detalle:</string>
    <string name="calendar_activity_details_content_content">-------------</string>
    <string name="sysacad_mobile_status_time">00:00</string>
    <string name="sysacad_mobile_status_key">XXXXX</string>
    <string name="sysacad_mobile_status_current_time">Session Time:</string>
    <string name="sysacad_mobile_status_current_key">Current Session Key:</string>
    <string name="sysacad_mobile_status_usr">--</string>
    <string name="sysacad_mobile_status_getting_token">Obteniendo Token</string>
    <string name="action_settings">Borrar Credenciales</string>
    <string name="title_activity_login">Ingresar Credenciales</string>
    <string name="prompt_email">Tu Legajo va aca&#8230;</string>
    <string name="prompt_password">Tu password va aca</string>
    <string name="action_sign_in_register"><b>Ingresar</b></string>
    <string name="go_home"><b>Ir al Home</b></string>
    <string name="retry_login"><b>Re-Intentar</b></string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="action_forgot_password">Recordar Password</string>
    <string name="login_progress_signing_in">Ingresando al Sistema…</string>
    <string name="error_invalid_email">Legajo Invalido</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_incorrect_password">Contraseña/Legajo Incorrecto</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="loadin_content_progress">Cargando Contenido Del Servidor…</string>
    <string name="loadin_content_progress_refresh">Resfrescando Session en el Servidor…</string>
    <string name="dialog_confirm_response_has_errors">Error:</string>
    <string name="dialog_confirm_response_has_errors_button">Aceptar</string>
    <string name="dialog_confirm_response_info">Error:</string>
    <string name="dialog_confirm_response_info_button">Aceptar</string>
    <string name="dialog_tittle_label">Ingeniero 2.0 dice:</string>
    <string name="dialog_tittle_label_about">Ingeniero 2.0</string>
    <string name="dialog_tittle_label_exam">Detalles de Examen:</string>
    <string name="dialog_tittle_label_ins_exam_details">Materia a Inscribirse:</string>
    <string name="dialog_tittle_label_ins_exam_delete_details">Materia a Borrar Inscripcion:</string>
    <string name="dialog_tittle_label_ins_exam">Estas seguro??</string>
    <string name="dialog_tittle_label_ins_exam_confirm">Ya estas en el horno!</string>
    <string name="dialog_tittle_label_ins_delete_exam_confirm">Arrugaste!</string>
    <string name="dialog_tittle_label_ins_exam_confirm_details">Te inscribiste con exito!</string>
    <string name="dialog_tittle_label_ins_exam_confirm_delete_details">Se Borro con exito!</string>
    <string name="dialog_confirm_nothing_to_show">Nada por aqui</string>
    <string name="dialog_about_details">Reportar bugs a justomiguelvargas@gmail.com</string>
    <string name="getting_events_current_account" type="id">Obteniendo Examenes Por Rendir!</string>
    <string name="default_image_description" type="id">IMG</string>
    <string name="from_label_change" type="id">Fecha:</string>
    <string name="date_label_change">Fecha:</string>
    <string name="default_date_label_change">29/09/2014</string>
    <string name="set_button_label_change">Cambiar</string>
    <string name="until_label_change">Hasta:</string>
    <string name="search_button_label_change">Buscar</string>
    <string name="change_details_label_change">Detalles del Examen:</string>
    <string name="change_list_label_change">Resultados:</string>
    <string name="change_prompt">Tipo Evento</string>
    <string name="pomrpt_subjects_contact">Contacto</string>
    <string name="next_action">Siguiente</string>
    <string name="account_settings_display_prefs_title">Configuracion General de Interfaz</string>
    <string name="account_settings_message_lists">Lista de Notificaciones</string>
    <string name="account_settings_message_view">Vista de Notificaciones</string>
    <string name="account_settings_ringtone_times">Repeticion de Sonido</string>
    <string name="global_settings_notification_quick_delete_title">Show \'Delete\' button</string>
    <string name="global_settings_notification_quick_delete_description">Show a button in the notification that allows quick message deletion</string>
    <string name="quiet_time">Quiet Time</string>
    <string name="quiet_time_description">Disable ringing, buzzing and flashing at night</string>
    <string name="quiet_time_starts">Quiet Time starts</string>
    <string name="quiet_time_ends">Quiet Time ends</string>
    <string name="account_setup_basics_email_hint">Pager address</string>
    <string name="account_setup_basics_password_hint">Password</string>
    <string name="account_setup_basics_manual_setup_action">Manual setup</string>
    <string name="local_storage_provider_label">Lugar de guardado</string>
    <string name="account_settings_notify_label">Alertar Nueva notificacion</string>
    <string name="account_settings_notify_summary">Mostrar notificacion en la barra de estado</string>
    <string name="account_settings_notify_self_label">Include outgoing Pager</string>
    <string name="account_settings_notify_self_summary">Show a notification for messages I sent</string>
    <string name="account_settings_show_pictures_label">Mostrar Siempre Imagenes?</string>
    <string name="account_settings_sync">Configuracion de Almacenamiento</string>
    <string name="account_settings_mail_check_frequency_label">Frecuencia de Checkeo automatico</string>
    <string name="account_settings_color_label">Color de Buzon</string>
    <string name="account_settings_color_summary">El color es usado en la carpeta y en la lista de los mensajes</string>
    <string name="account_settings_led_color_label">Elegir color de LED</string>
    <string name="account_settings_led_color_summary">Color que se mostrara ante un nuevo mensaje</string>
    <string name="account_settings_mail_display_count_label">Tamaño de carpeta local</string>
    <string name="account_settings_autodownload_message_size_label">Descargar notificaciones hasta</string>
    <string name="account_settings_message_age_label">Sincronizar notificaciones desde</string>
    <string name="notifications_title">Notificaciones Entrantes</string>
    <string name="account_settings_vibrate_enable">Vibracion</string>
    <string name="account_settings_vibrate_summary">Vibrar cuando llega una notificacion</string>
    <string name="account_settings_vibrate_pattern_label">Patrones de Vibracion</string>
    <string name="account_settings_vibrate_times">Repetir vibracion</string>
    <string name="account_settings_check_connectivity_times">Notify Lost Signal After (Minutes)</string>
    <string name="account_settings_ringtone">Elegir ringtone</string>
    <string name="account_settings_led_label">Titilar LED</string>
    <string name="account_settings_led_summary">Titilar LED cuando llegue una nueva notificacion</string>
</resources>