<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="54dip" 
    android:padding="6dip"
    android:fadingEdge="none"
    android:scrollbarStyle="outsideInset">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        
         <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="SWATKATS PAGER"
                    android:src="@drawable/chose_account" />
        
      <TextView
        android:text="@string/account_setup_basics_swat"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:paddingBottom="10dip"
        android:focusable="true"
          />
          
      <RadioGroup android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:id="@+id/RolePager">
	  	<RadioButton android:checked="false"
			android:id="@+id/option_primary" 
			android:text="Primary Pager"/>
	  	<RadioButton android:checked="false"
			android:id="@+id/option_secondary" 
			android:text="Secondary Pager"/>
	  	<RadioButton android:checked="false"
			android:id="@+id/option_l3" 
			android:text="L3 Pager"/>
	  	<RadioButton android:checked="false"
	  	    android:visibility="gone"
			android:id="@+id/debug_email_option" 
			android:text="Debug E-mail"/>
	  </RadioGroup>    
    <EditText
        android:id="@+id/account_email"
        android:hint="@string/account_setup_basics_email_hint"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:visibility="gone"
        />
    <EditText
        android:id="@+id/account_password"
        android:inputType="textPassword"
        android:hint="@string/account_setup_basics_password_hint"
        android:password="true"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:nextFocusDown="@+id/next"
        android:visibility="gone"
        />
    <CheckBox
        android:id="@+id/account_default"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="Send mail from this account by default"
        android:visibility="gone"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        />
    </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_marginTop="-45dip" 
        android:padding="0dip"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|right" 
        android:background="@android:drawable/bottom_bar"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
        <Button
            android:id="@+id/manual_setup"
            android:text="@string/account_setup_basics_manual_setup_action"
            android:minWidth="@dimen/button_minWidth"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="-4dip" 
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="false" 
            android:visibility="gone"
            />
        <Button
            android:id="@+id/next"
            android:text="@string/next_action"
            android:minWidth="@dimen/button_minWidth"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:drawableRight="@drawable/button_indicator_next"
            android:layout_marginBottom="-4dip" 
            android:layout_alignParentRight="true"
            android:layout_centerVertical="false" 
            />
    </RelativeLayout>
</LinearLayout>
